--- a/templates/createpro.html
+++ b/templates/createpro.html
@@ -573,13 +573,13 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label class="required">Stock Quantity</label>
-                                        <input type="number" class="form-control" id="stock-qty" name="stock_qty" placeholder="Stock Quantity">
+                                        <input value="0" type="number" class="form-control" id="stock-qty" name="stock_qty" placeholder="Stock Quantity">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="form-group">
                                         <label class="required">Regular Price</label>
-                                        <input type="number" class="form-control" id="regular-price" name="regular_price" placeholder="Regular Price">
+                                        <input value="0" type="number" class="form-control" id="regular-price" name="regular_price" placeholder="Regular Price">
                                     </div>
                                 </div>
                            
@@ -587,7 +587,7 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label>Sale Price</label>
-                                        <input type="number" class="form-control" id="sale-price" name="sale_price" placeholder="Sale Price">
+                                        <input value="0" type="number" class="form-control" id="sale-price" name="sale_price" placeholder="Sale Price">
                                     </div>
                                 </div>
                             </div>
@@ -1243,13 +1243,13 @@
                     <div class="col">
                         <div class="form-group">
                             <label>Stock Qty</label>
-                            <input type="number" class="form-control" name="variation_stock_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Quantity">
+                            <input value="0" type="number" class="form-control" name="variation_stock_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Quantity">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Regular Price</label>
-                            <input type="number" class="form-control" name="variation_regular_price_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Regular Price">
+                            <input value="0" type="number" class="form-control" name="variation_regular_price_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Regular Price">
                         </div>
                     </div>
                 </div>
@@ -1257,13 +1257,13 @@
                     <div class="col">
                         <div class="form-group">
                             <label>Sale Price</label>
-                            <input type="number" class="form-control" name="variation_sale_price_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Sale Price">
+                            <input value="0" type="number" class="form-control" name="variation_sale_price_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Sale Price">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Purchase Price</label>
-                            <input type="number" class="form-control" name="variation_purchase_price_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Purchase Price">
+                            <input value="0" type="number" class="form-control" name="variation_purchase_price_${attribute}_${value.replace(/\s+/g, '_').toLowerCase()}" placeholder="Purchase Price">
                         </div>
                     </div>
                 </div>
