--- a/templates/cart.html
+++ b/templates/cart.html
@@ -36,7 +36,7 @@
                             <a href="/cart/increase/{{ item.id }}/"
                                 class="px-3 py-1 bg-gray-100 hover:bg-gray-200 rounded-r-md">+</a>
                         </div>
-                        <p class="font-semibold">৳{{ item.quantity|multiply:item.product.discount_price }}</p>
+                        <p class="font-semibold">৳{{ item.quantity|multiply:item.price }}</p>
                     </div>
                 </div>
                 <a href="/cart/remove/{{ item.id }}/" class="ml-4 text-red-500 hover:text-red-700">
