--- a/templates/cart.html
+++ b/templates/cart.html
@@ -27,7 +27,7 @@
                     class="w-24 h-24 object-cover rounded-md">
                 <div class="ml-4 flex-1">
                     <h2 class="text-lg font-semibold">{{ item.product.name }}</h2>
-                    <p class="text-gray-600">{{ item.description }}</p>
+                    <p class="text-gray-600">{{ item.other }}</p>
                     <div class="mt-2 flex items-center justify-between">
                         <div class="flex items-center border rounded-md">
                             <a href="/cart/decrease/{{ item.id }}/"
