--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 </div>
 {% endif %}
 
-<div class="container mx-auto px-4">
+<div class="container mx-auto">
     <!-- Hero and Categories Section -->
     <section class="flex flex-col lg:flex-row gap-5 my-4">
         <!-- Categories Section - Desktop -->
