--- a/templates/orders.html
+++ b/templates/orders.html
@@ -65,6 +65,7 @@
                         <div>
                             <h3 class="font-semibold text-lg">{{item.product.name}}</h3>
                             <p class="text-gray-600">Quantity: {{item.quantity}}</p>
+                            <p class="text-gray-600">Attributes: {{item.others}}</p>
                         </div>
                     </div>
 
